--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,6 @@ UnityProject/[Aa]ssets/[Aa]ddressable[Aa]ssets[Dd]ata/*/*.bin*
 # Temporary auto-generated Android Assets
 UnityProject/[Aa]ssets/[Ss]treamingAssets/aa.meta
 UnityProject/[Aa]ssets/[Ss]treamingAssets/aa/*
+NativePlugin/Projects/x64
+*.exp
+*.lib
